themes/startwords/assets/scss/article/_notes.scss
.footnotes {

    ol {
        /* remove side margin/padding on ol so target li can be full width */
        margin: 0 -20px 50px;
        padding-inline-start: 0;
        counter-reset: footnoteCounter;
        padding-bottom: 50px;
        list-style: none;
    }

    li {
        counter-increment: footnoteCounter;
        margin: 0 2.5rem;

         &::before {
            /* replace list marker with counter (::marker not yet widely supported) */
            content: counters(footnoteCounter, ".");
            color: $red;
            display: inline-block;
            float: left;
            padding-right: 2px;
            vertical-align: top;
            font-size: 70%;
            font-weight: 600;
            font-family: $font-serif;
        }

    }

    a[role=doc-backlink] {
        text-decoration: none;
        color: $red;
    }

    $arrow-icon-size: 26px;

    /* active footnote */
    li:target {
        -webkit-clip-path: polygon(calc(100% - 70px) 0, 100% 11%, 100% 100%, 0 100%, 0 34%);
        clip-path: polygon(calc(100% - 70px) 0, 100% 11%, 100% 100%, 0 100%, 0 34%);
        background: $purple;

        display: block;
        position: fixed;
        width: 100vw;  /* full-width on mobile */
        margin: 0;
        padding-top: rem(140px);
        bottom: 0;

        font-family: IBM Plex Serif;
        font-size: rem(16px);
        line-height: rem(22px);
        color: $off-white;

        /* full width up to 414px; limit width on larger screens  */
        @media (min-width: $breakpoint-fullwidth-notes + 1) {
            width: rem(320px);
            right: rem(50px);
            bottom: 12rem;
        }
        &::before {
            /* position footnote number */
            position: absolute;
            font-weight: bold;
            /* align with arrow icon */
            width: $arrow-icon-size;
            text-align: center;
            right: rem(57px);
            top: rem(50px);
            font-size: rem(35px);
        }

        p {
            padding: rem(15px);
            margin: 0;
        }

        a {
            color: $red;
        }

        a[role=doc-backlink] {
            position: absolute;
            top: rem(5px);
            right: rem(57px);  /* arrow point is 70x from right; subtract ~1/2 icon size */
            width: $arrow-icon-size;
            height: $arrow-icon-size;
            color: transparent;  /* make text transparent */
            display: block;
            text-decoration: none;
            /* set icon as background image */
            background-image: url(/img/icons/downward-arrow-circle.svg);

        }

        /* mirror image version for left side of the page */
        &.flip {
            -webkit-clip-path: polygon(70px 0, 100% 34%, 100% 100%, 0 100%, 0 11%);
            clip-path: polygon(70px 0, 100% 34%, 100% 100%, 0 100%, 0 11%);

            &::before {
                left: rem(25px);
            }

            a[role=doc-backlink] {
                left: rem(57px);
            }
        }


    }

}

a.footnote-ref {
    color: $red;
    text-decoration: none;
    font-weight: 600;
    font-family: $font-serif;
    position: relative;
    /* extend left to make a larger touch target */
    padding-left: rem(100px);
    margin-left: rem(-100px);
    padding-bottom: rem(10px);  /* probably wrong, but line-height not set yet */

    &::after {
        content: " ";
        display: inline-block;
        position: absolute;
        right: 0;
        bottom: 0;
        padding-left: rem(100px);
        margin-left: rem(-100px);
        width: rem(100px);
        height: rem(5px);
        background: linear-gradient(to right, white, $transparent-red);
    }
}

